2008-02-08  Wim Taymans  <wim.taymans@collabora.co.uk>

	* tests/examples/seek/seek.c: (stop_cb), (clear_streams),
	(update_streams), (video_combo_cb), (audio_combo_cb),
	(text_combo_cb), (volume_spinbutton_changed_cb), (main):
	Add some stream switching and volume gui for playbin2.

2008-02-08  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/playback/gstplay-marshal.list:
	Added marshal for streamselector Tags.

	* gst/playback/gstplaybasebin.c: (set_active_source):
	Streamselector now selects pads based on the pad object instead of its
	name.

	* gst/playback/gstplaybin2.c: (gst_play_bin_class_init),
	(init_group), (gst_play_bin_init), (get_group), (get_tags),
	(gst_play_bin_get_video_tags), (gst_play_bin_get_audio_tags),
	(gst_play_bin_get_text_tags),
	(gst_play_bin_set_current_video_stream),
	(gst_play_bin_set_current_audio_stream),
	(gst_play_bin_set_current_text_stream),
	(gst_play_bin_set_property), (gst_play_bin_get_property),
	(pad_added_cb), (pad_removed_cb), (autoplug_select_cb):
	Remove option to mute streams with the current-a/v/t property, we have
	this functionality in the flags.
	Add signals to notify when the number of A/V/T channels changed.
	Add action signals to get tags for the A/V/T streams.
	Implement setting the current A/V/T stream.
	Rearrange some things to simplify stream selection.
	Implement volume.

	* gst/playback/gstplaysink.c: (gst_play_sink_set_volume),
	(gst_play_sink_get_volume), (gst_play_sink_set_property),
	(gst_play_sink_get_property), (gen_video_chain), (gen_audio_chain),
	(activate_vis), (gst_play_sink_reconfigure):
	* gst/playback/gstplaysink.h:
	Add and implement volume setting methods.

	* gst/playback/gststreamselector.c: (gst_selector_pad_class_init),
	(gst_selector_pad_finalize), (gst_selector_pad_get_property),
	(gst_selector_pad_event), (gst_stream_selector_class_init),
	(gst_stream_selector_init), (gst_stream_selector_finalize),
	(gst_stream_selector_set_property),
	(gst_stream_selector_get_property),